--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         <li><a href="https://www.producthunt.com">Product Hunt</a></li>
         <li><a href=" https://www.uneed.best/">Uneed</a></li>
     </ul>
- 
+   <h1>Accelerators/Incubators</h1>
+    <ul>
+        <li><a href="https://www.ycombinator.com">YC</a></li>
+        <li><a href="https://www.zfellows.com/">Z Fellows</a></li>
+        <li><a href="https://www.southparkcommons.com/founder-fellowship">SPC - Founder Fellowship</a></li>
+        
+    </ul>
 </body>
 </html>
