--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
             <ul>
                 <li><a href="https://www.1517fund.com/post/1517-medici-project">1517 Medici Project</a></li>
                 <li><a href="https://www.776.org/">776 Fellowship</a></li>
+                <li><a href="https://www.activate.org/the-fellowship">Activate Fellowship</a></li>
+                <li><a href="https://adamnite.org/pages/grant">Adamnite Microgrants</a></li>
+                <li><a href="https://www.aiagentschallenge.com/"></a>AI Agents Global Challenge</li>
+                <li><a href="https://antikythera.org/studios">Antikythera Studio</a></li>
+                <li><a href="http://aspentechpolicyhub.org/nonprofit-and-public-interest-fellowship/">Aspen Tech Policy Hub</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1JTNfDeRXZKR5hEF3WYIBpi2Wu8QAeghFwJvJ53DrJWo/edit?gid=0#gid=0">View more grants and deep dive on the above mentioned ones in <a href="https://x.com/DStrachman">Danielle Strachman's </a>amazing list</a></li>
+                
+                
             </ul>
         </div>
         <div class="section">
