--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="https://www.aiagentschallenge.com/"></a>AI Agents Global Challenge</li>
                 <li><a href="https://antikythera.org/studios">Antikythera Studio</a></li>
                 <li><a href="http://aspentechpolicyhub.org/nonprofit-and-public-interest-fellowship/">Aspen Tech Policy Hub</a></li>
-                <li><a href="https://docs.google.com/spreadsheets/d/1JTNfDeRXZKR5hEF3WYIBpi2Wu8QAeghFwJvJ53DrJWo/edit?gid=0#gid=0">View more grants and deep dive on the above mentioned ones in <a href="https://x.com/DStrachman">Danielle Strachman's </a>amazing list</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1JTNfDeRXZKR5hEF3WYIBpi2Wu8QAeghFwJvJ53DrJWo/edit?gid=0#gid=0">View more</a> grants and deep dive on the above mentioned ones in <a href="https://x.com/DStrachman">Danielle Strachman's </a> amazing list</li>
                 
                 
             </ul>
