--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             background-color: black;
             color: white;
             font-family: Arial, sans-serif;
+            word-wrap: break-word; /* Enable word wrapping */
+            overflow-wrap: break-word; /* Enable word wrapping */
         }
         a {
             color: white;
@@ -21,6 +23,7 @@
         }
         .section {
             margin: 20px;
+            max-width: 300px; /* Set a maximum width to prevent overly wide sections */
         }
         ul {
             padding: 0; /* Remove default padding */
@@ -39,12 +42,10 @@
                 <li><a href="https://www.776.org/">776 Fellowship</a></li>
                 <li><a href="https://www.activate.org/the-fellowship">Activate Fellowship</a></li>
                 <li><a href="https://adamnite.org/pages/grant">Adamnite Microgrants</a></li>
-                <li><a href="https://www.aiagentschallenge.com/"></a>AI Agents Global Challenge</li>
+                <li><a href="https://www.aiagentschallenge.com/">AI Agents Global Challenge</a></li>
                 <li><a href="https://antikythera.org/studios">Antikythera Studio</a></li>
                 <li><a href="http://aspentechpolicyhub.org/nonprofit-and-public-interest-fellowship/">Aspen Tech Policy Hub</a></li>
-                <li><a href="https://docs.google.com/spreadsheets/d/1JTNfDeRXZKR5hEF3WYIBpi2Wu8QAeghFwJvJ53DrJWo/edit?gid=0#gid=0">View more</a> grants and deep dive on the above mentioned ones in <a href="https://x.com/DStrachman">Danielle Strachman's </a> amazing list</li>
-                
-                
+                <li><a href="https://docs.google.com/spreadsheets/d/1JTNfDeRXZKR5hEF3WYIBpi2Wu8QAeghFwJvJ53DrJWo/edit?gid=0#gid=0">View more</a> grants and deep dive on the above mentioned ones in <a href="https://x.com/DStrachman">Danielle Strachman's</a> amazing list</li>
             </ul>
         </div>
         <div class="section">
