--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             background-color: black;
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: Times New Roman, sans-serif;
             word-wrap: break-word; /* Enable word wrapping */
             overflow-wrap: break-word; /* Enable word wrapping */
         }
@@ -56,7 +56,7 @@
             </ul>
         </div>
         <div class="section">
-            <h1>Accelerators/Incubators</h1>
+            <h1>Accelerators  /  Incubators</h1>
             <ul>
                 <li><a href="https://www.ycombinator.com">YC</a></li>
                 <li><a href="https://www.zfellows.com/">Z Fellows</a></li>
