--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         }
         li {
             list-style: none; /* Remove bullet points */
+            margin-bottom: 10px; /* Add space after each list item */
         }
     </style>
 </head>
@@ -56,7 +57,7 @@
             </ul>
         </div>
         <div class="section">
-            <h1>Accelerators  /  Incubators</h1>
+            <h1>Accelerators / Incubators</h1>
             <ul>
                 <li><a href="https://www.ycombinator.com">YC</a></li>
                 <li><a href="https://www.zfellows.com/">Z Fellows</a></li>
