--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             background-color: black;
             color: white;
             font-family: Times New Roman, sans-serif;
+            font-size: 18px; /* Increase the base font size */
             word-wrap: break-word; /* Enable word wrapping */
             overflow-wrap: break-word; /* Enable word wrapping */
         }
@@ -63,8 +64,7 @@
                 <li><a href="https://www.zfellows.com/">Z Fellows</a></li>
                 <li><a href="https://www.southparkcommons.com/founder-fellowship">SPC - Founder Fellowship</a></li>
                 <li><a href="https://500.co/">500 Startups</a></li>
-                <li><a href=" https://variant.fund/variant-founder-fellowship/">Variant Founder Fellowship</a></li>
-               
+                <li><a href="https://variant.fund/variant-founder-fellowship/">Variant Founder Fellowship</a></li>
             </ul>
         </div>
     </div>
