--- a/index.html
+++ b/index.html
@@ -63,8 +63,17 @@
                 <li><a href="https://www.ycombinator.com">YC</a></li>
                 <li><a href="https://www.zfellows.com/">Z Fellows</a></li>
                 <li><a href="https://www.southparkcommons.com/founder-fellowship">SPC - Founder Fellowship</a></li>
-                <li><a href="https://500.co/">500 Startups</a></li>
+                <li><a href="https://500.co/">500 Startups</a></li>                
+            </ul>
+        </div>
+        <div class="section">
+            <h1> Crypto Accelerators / Incubators</h1>
+            <ul>
+                 
                 <li><a href="https://variant.fund/variant-founder-fellowship/">Variant Founder Fellowship</a></li>
+                <li><a href="https://www.graphpapercapital.xyz/">Graph Paper Capital</a></li>
+                <li><a href=" https://www.seedclub.xyz/getfunded/accelerator">Seed Club</a></li>
+                <li><a href="https://a16zcrypto.x/">a16z Crytpo</a></li>   
             </ul>
         </div>
     </div>
