--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <li><a href="https://a16zcrypto.x/">a16z Crytpo</a></li> 
                 <li><a href="https://ideocolab.com/incubation">IDEO Colab Incubation</a></li> 
                 <li><a href="https://www.gitcoin.co/">Gitcoin Grants</a></li> 
-                
+                <li><a href="https://www.metacartel.org/grants">Metacartel Grants</a></li>
                 
             </ul>
         </div>
