--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 <li><a href="https://ideocolab.com/incubation">IDEO Colab Incubation</a></li> 
                 <li><a href="https://www.gitcoin.co/">Gitcoin Grants</a></li> 
                 <li><a href="https://www.metacartel.org/grants">Metacartel Grants</a></li>
+                <li><a href="https://app.charmverse.io/op-grants/optimism-grants-council-8323028890716944">Optimism Grants</a></li>
+                <li><a href="https://www.uniswapfoundation.org/opportunities">Uniswap Grants</a></li> 
+              
                 
             </ul>
         </div>
