--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
                 <li><a href="https://www.uneed.best/">Uneed</a></li>
             </ul>
         </div>
+              <div class="section">
+            <h1>Valuation Calculator</h1>
+            <ul>
+                <li><a href="https://www.omnicalculator.com/finance/pre-and-post-money-valuation">Pre and Post Money Valuation</a></li>
+                <li><a href="https://neoschronos.com/apps/equity-dilution-calculator/">Equity Dilution Calculator</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
