--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             list-style: none; /* Remove bullet points */
             margin-bottom: 10px; /* Add space after each list item */
         }
+        .centered {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
@@ -61,7 +66,7 @@
                 <li><a href="https://docs.google.com/spreadsheets/d/1JTNfDeRXZKR5hEF3WYIBpi2Wu8QAeghFwJvJ53DrJWo/edit?gid=0#gid=0">View more</a> grants and deep dive on the above mentioned ones in <a href="https://x.com/DStrachman">Danielle Strachman's</a> amazing list</li>
             </ul>
         </div>
-
+        
         <div class="section">
             <h1>Accelerators / Incubators</h1>
             <ul>
@@ -98,7 +103,9 @@
                 <li><a href="https://www.uneed.best/">Uneed</a></li>
             </ul>
         </div>
-              <div class="section">
+    </div>
+    <div class="centered">
+        <div class="section">
             <h1>Valuation Calculator</h1>
             <ul>
                 <li><a href="https://www.omnicalculator.com/finance/pre-and-post-money-valuation">Pre and Post Money Valuation</a></li>
