--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         }
         .container {
             display: flex;
-            justify-content: space-around;
             flex-wrap: wrap; /* Allows wrapping on smaller screens */
         }
         .section {
             margin: 20px;
+            width: calc(25% - 40px); /* Four sections per row with space for margins */
             max-width: 300px; /* Set a maximum width to prevent overly wide sections */
         }
         ul {
@@ -87,7 +87,7 @@
                 <li><a href="http://aspentechpolicyhub.org/nonprofit-and-public-interest-fellowship/">Aspen Tech Policy Hub</a></li>
                 <li><a href="https://ideocolab.com/residency">IDEO Colab Creative Residency</a></li>
                 
-                <li><a href="https://docs.google.com/spreadsheets/d/1JTNfDeRXZKR5hEF3WYIBpi2Wu8QAeghFwJvJ53DrJWo/edit?gid=0#gid=0">View more</a> grants and deep dive on the above mentioned ones in <a href="https://x.com/DStrachman">Danielle Strachman's</a> amazing list</li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1JTNfDeRXZKR5hEF3WYIBpi2Wu8QAeghFwJvJ53DrJWo/edit?gid=0#gid=0">View more</a> grants and deep dive on the above mentioned ones in <a href="https://x.com/DStrachman">Danielle Strachman's</a> amazing list</a></li>
             </ul>
         </div>
 
