--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
               <li><a href="https://1984.vc/docs/cap-table-worksheet/#AAN4IgDgTgpgsg9gOygTxALgMwDYAMf8A0IALgIYQDmUxA8mMQJaIDOACnHADboCMORAVwQDmUACZ1GLdAHYArPn4gIcAO4ARUmXQBtUAzHoQAThBFiyMFCMBjOAFt7iMyASl71tCAByWgBakCAAEAEKcUDYBEDYAXsgA1i7MUVDM6AAsCooAvgT6hl58LhZWtg5OCC5uHkYwUJyBDFBBrFAQ8QwIaUTJ5KkZWfi5.UYAkszMAuKSTF3Flp4gdo7ORNWL45PiQTPSPSlpaABMgzjDIAZGPDzzpV7MpABm1mvuiwCaAMJBMgCkLp0AG6pYgeBDEXgnQggMQMZh2IQQtBKGykMC8GQADjkMh46QAdEdsbj0kS5OkiHYEMCIMxZgAVBZGZA2GTo86XQpHW6LB7PKpvIxfIIwABi3gB1JBYKRGHk0Nh8LgiPQKLRvEU0KpNLpiEZdxALPsj0qHIKIB4GB5Rj5L1cgsKxkx6SCADUoOCBNBuhcpcxQR6kfKFXCEeDVZT1Wg.JqUYgdQymV4wHB_SAzVd0tb7k87esjKKGLTiEEAErKhBiIKfNEMMjcIhA6WBjLBpSKsNItXo6OxuNS2mJg0ptMZwpybMgW0CmpeEJaYhtZBuwNe_qNv0B8NoU7t0MVruRnuW2OU.NtXUIfWLEcQscWrCT0QQJo._NeADKqPCK890Ba5DEEgtKSsC_oyugGCxvePAyE.bSvjOizeHAEDEH4MSIHaTbgS2vaatkAC6RCQAwNjiOWQhiIcPDZEAA">Cap table worksheet(Equity Dilution Calculator)</a></li>
                 <li><a href="https://www.omnicalculator.com/finance/pre-and-post-money-valuation">Pre and Post Money Valuation</a></li>
                 <li><a href="https://neoschronos.com/apps/equity-dilution-calculator/">Equity Dilution Calculator</a></li>
+              <li><a href="https://calculator.textswithfounders.com/">What valuation should I raise at?</a></li>
             </ul>
         </div>
         
@@ -120,7 +121,7 @@
                 <li><a href="https://www.zfellows.com/">Z Fellows</a></li>
                 <li><a href="https://www.southparkcommons.com/founder-fellowship">SPC - Founder Fellowship</a></li>
                 <li><a href="https://500.co/">500 Startups</a></li>  
-                <li><a href="https://www.beondeck.com/">On Deck Fellowship</a></li> 
+                <li><a href="https://www.beondeck.com/">ODF</a></li> 
             </ul>
         </div>
               <div class="section">
