--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
                 <li><a href="https://www.uneed.best/">Uneed</a></li>
             </ul>
         </div>
+
+        <div class="section">
+            <h1>Academia  Accelerators </h1>
+            <ul>
+                <li><a href=https://spec.tech/model">Speculative Technologies </a></li>
+
+            </ul>
+        </div>
+      
     </div>
 </body>
 </html>
