--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
   gtag('config', 'G-7L0WX8TCS3');
 </script>
+
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7833755818306371"
+     crossorigin="anonymous">
+  </script> 
+  
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startup Starterkit</title>
